[package]
name = "booky"
description = "A tool to analyze English text"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/booky"
repository = "https://github.com/DougLau/booky/"
readme = "README.md"
version = "0.1.0"
edition = "2024"
default-run = "booky"

[dependencies]
anyhow = "1.0"
argh = "0.1"
fastrand = "2.0"
yansi = "1.0"

[[bin]]
name = "booky"
path = "src/bin/booky.rs"
